--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,161 @@
 @import url('https://fonts.googleapis.com/css?family=Satisfy');
 @import url('https://fonts.googleapis.com/css?family=Roboto:300');
 
-h2 {
-    background: url(../img/zen.svg);
-    background-repeat: no-repeat;
-    background-size: contain;
-}
 
+h1 {
+    padding-top: 0;
+    padding-bottom: 5px;
+    border-bottom: none;
+    font-family: "RIBM+Plex+Mono";
+    font-size: 3.2em;
+    text-transform: uppercase;
+  }
+  h1::before {
+    display: inline-block;
+    position: relative;
+    top: 20px;
+    content: "";
+    width: 80px;
+    height: 80px;
+    margin: -20px 20px 0 0;
+    background: url(enso.svg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    opacity: 0.6;
+  }
+  h2 {
+    display: block;
+    padding-top: 5px;
+    padding-bottom: 30px;
+    border-top: none;
+    color: rgba(255,255,255,0.6);
+    font-size: 1.6em;
+    font-style: italic;
+    font-family: "satisfy";
+  }
+  h2::before {
+    content: " ";
+    padding: 50px;
+  }
+  h3 {
+    margin: 2em 0 0 0;
+    color: #2e484c;
+    font-family: "Roboto:300";
+    font-size: 1.8em;
+    font-weight: normal;
+    
+  }
+  body {
+    color: #325050;
+    background: #fff;
+    font-family: 'Libre Baskerville', sans-serif;
+    font-size: 70%;
+  }
+  header {
+    height: 230px;
+    padding: 20px 0 70px 0;
+  
+    background: #2d6360 50% 0 url(../img/huntington.png) no-repeat;
+  
+    background-attachment: fixed, fixed, fixed, scroll;
+    background-image: url(../img/huntington.png);
+    background-position: 0 0, 0 0, -5px -25px, 0 50%;
+    background-repeat: repeat, repeat, repeat, no-repeat;
+    background-size: auto, auto, auto, cover;
+    text-align: center;
+  }
+  .summary {
+    padding-top: 2em;
+  }
+  h1, h2 {
+    padding: 0 10%;
+    margin: 0;
+    color: #fff;
+    font-weight: normal;
+  }
+  .summary, .preamble {
+    width: 80%;
+    margin: 0 auto;
+  }
+  p {
+    margin: 0.75em 0;
+    line-height: 2;
+  }
+  .page-wrapper {
+    position: relative;
+  }
+
+    .supporting h3, .supporting p {
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+      }
+
+      div.participation, div.benefits {
+        background-attachment: scroll, scroll, fixed;
+        background-color: rgba(99, 143, 117, 0.5);
+        background-image:  url(../img/bamboo.png);
+        background-repeat: repeat, repeat, no-repeat;
+        background-size: auto, auto, cover;
+      }  
+      div.participation {
+        padding: 3em 0;
+        margin-top: 3em;
+      }
+      div.benefits {
+        padding-bottom: 3em;
+        margin-bottom: 3em;
+      }
+      div.participation {
+        padding: 3em 0;
+        margin-top: 3em;
+      }
+      div.benefits {
+        padding-bottom: 3em;
+        margin-bottom: 3em;
+      }
+      div.participation h3, div.benefits h3 {
+      margin-top: 0;
+      }
+      abbr {
+        border: none;
+        text-transform: uppercase;
+        font-size: 0.9em;
+        letter-spacing: 0.01em;
+      }
+      .sidebar {
+        background: #edf4f0;
+      }
+      .sidebar h3 {
+        display: none;
+      }
+      .sidebar a {
+        color: #607476;
+        text-decoration: none;
+      }
+      .sidebar a:hover, .sidebar a:focus {
+        color: #49968e;
+      }
+    .sidebar ul {
+      padding: 0;
+      margin: 0;
+      list-style: none;
+      overflow: hidden;
+    }
+    
+    
+      .intro a{
+          font-family: "satisfy";
+      }
+      .design-selection ul, .zen-resources ul {
+        margin: 0;
+      }
+      .design-selection li, .zen-resources li {
+        float: left;
+        width: 50%;
+        padding: 1.5em 10%;
+        border-top: solid 1px #d9e3dc;
+        color: #c0cac3;
+        font-style: italic;
+      }
+      
