--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ h1 {
     content: "";
     width: 80px;
     height: 80px;
-    margin: -20px 20px 0 0;
+
     background: url(enso.svg);
     background-repeat: no-repeat;
     background-size: 100%;
@@ -52,17 +52,26 @@ h1 {
     font-family: 'Libre Baskerville', sans-serif;
     font-size: 70%;
   }
+  a {
+  color: #070707;
+  
+  transition: all 0.25s ease-out;
+  text-decoration: none;
+}
+  a:visited {
+    color: #1a5952;
+  }
+  a:hover, a:focus {
+    color: #0599c2;
+    text-decoration: underline;
+  }
   header {
     height: 230px;
-    padding: 20px 0 70px 0;
-  
     background: #2d6360 50% 0 url(../img/huntington.png) no-repeat;
   
     background-attachment: fixed, fixed, fixed, scroll;
     background-image: url(../img/huntington.png);
-    background-position: 0 0, 0 0, -5px -25px, 0 50%;
     background-repeat: repeat, repeat, repeat, no-repeat;
-    background-size: auto, auto, auto, cover;
     text-align: center;
   }
   .summary {
@@ -94,7 +103,7 @@ h1 {
 
       div.participation, div.benefits {
         background-attachment: scroll, scroll, fixed;
-        background-color: rgba(99, 143, 117, 0.5);
+        background-color: rgba(69, 107, 85, 0.5);
         background-image:  url(../img/bamboo.png);
         background-repeat: repeat, repeat, no-repeat;
         background-size: auto, auto, cover;
@@ -102,19 +111,15 @@ h1 {
       div.participation {
         padding: 3em 0;
         margin-top: 3em;
+        color: white;
       }
       div.benefits {
         padding-bottom: 3em;
         margin-bottom: 3em;
+        color: white;
       }
-      div.participation {
-        padding: 3em 0;
-        margin-top: 3em;
-      }
-      div.benefits {
-        padding-bottom: 3em;
-        margin-bottom: 3em;
-      }
+      
+      
       div.participation h3, div.benefits h3 {
       margin-top: 0;
       }
@@ -128,7 +133,7 @@ h1 {
         background: #edf4f0;
       }
       .sidebar h3 {
-        display: none;
+        display:list-item;
       }
       .sidebar a {
         color: #607476;
@@ -145,9 +150,7 @@ h1 {
     }
     
     
-      .intro a{
-          font-family: "satisfy";
-      }
+      
       .design-selection ul, .zen-resources ul {
         margin: 0;
       }
@@ -159,4 +162,112 @@ h1 {
         color: #c0cac3;
         font-style: italic;
       }
+      .design-selection li:hover, .design-selection li:focus {
+        background: -moz-linear-gradient(left,  rgba(255,255,255,0) 0%, rgba(255,255,255,0.5) 50%, rgba(255,255,255,0) 100%); 
+        background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(50%,rgba(255,255,255,0.5)), color-stop(100%,rgba(255,255,255,0))); 
+        background: -webkit-linear-gradient(left,  rgba(255,255,255,0) 0%, rgba(255,255,255,0.5) 50%, rgba(255,255,255,0) 100%); 
+        background: -o-linear-gradient(left,  rgba(255,255,255,0) 0%, rgba(255,255,255,0.5) 50%, rgba(255,255,255,0) 100%); 
+        background: -ms-linear-gradient(left,  rgba(255,255,255,0) 0%, rgba(255,255,255,0.5) 50%, rgba(255,255,255,0) 100%); 
+        background: linear-gradient(to right,  rgba(255,255,255,0) 0%, rgba(255,255,255,0.5) 50%, rgba(255,255,255,0) 100%); 
+      }
+      .design-selection li:nth-child(2n+1), .zen-resources li:nth-child(2n+1) {
+        clear: left;
+      }
+      .design-selection .design-name, .zen-resources a, li.viewall a {
+        display:none;
+        margin-bottom: 5px;
+        font-family: "Roboto:300";
+        font-size: 1.2em;
+        font-style: normal;
+       
+      }
+      .design-selection h3 {
+        display: none;
+      }
+      .design-selection .designer-name {
+        color: #729275;
+        font-size: 0.9em;
+        font-style: normal;
+      }
       
+      footer {
+        clear: both;
+        color: #fff;
+        background: #2e573f;
+        text-align: center;
+      }
+      footer a {
+        display: inline-block;
+        overflow: hidden;
+        width: 50px;
+        height: 50px;
+        padding-top: 20px;
+        margin: 5px;
+        position: relative;
+        color: rgba(255, 255, 255, 0.5);
+        box-shadow 0.25s ease-out;
+        box-shadow 0.25s ease-out;
+        transition: color 0.25s ease-out, box-shadow 0.25s ease-out;
+        
+        
+      }
+      footer a:hover, footer a:focus {
+        color: rgba(255, 255, 255, 0.3);
+        text-decoration: none;
+      }
+      footer a:visited {
+        color: rgba(255, 255, 255, 0.2);
+      }
+      footer a::before {
+        display: block;
+        position: absolute;
+        top: 1px;
+        left: 0;
+        overflow: visible;
+        font-size: 36px;
+        text-indent: 0;
+      }
+      
+      
+      .requirements p:nth-child(5) {
+        padding-bottom: 2em;
+      }
+      .supporting .requirements {
+        float: none;
+        clear: both;
+        width: 100%;
+        padding-left: 0;
+        padding-right: 0;
+      }
+      .supporting .requirements a {
+        text-decoration: none;
+      }
+        .supporting .requirements a:hover, .supporting .requirements a:focus {
+          text-decoration: underline;
+        }
+      .supporting .requirements h3 {
+        padding-top: 0;
+      }
+      .requirements p:last-child {
+        width: auto;
+        padding: 1em 12%;
+        margin: 0;
+        color: rgba(233, 227, 227, 0.4);
+        background: #92c994;
+      
+        background-attachment: fixed, fixed, fixed, scroll;
+        background-image: url(contours.png), url(gridlines.png), url(noise.png), url(koi.jpg);
+        background-position: 0 0, -5px -25px, 0 0, 0 50%;
+        background-repeat: repeat, repeat, repeat, no-repeat;
+        background-size: auto, auto, auto, cover;
+      
+        font-size: 2em;
+        text-align: center;
+      }
+      .requirements p:last-child a {
+        color: white;
+        font-style: italic;
+        font-family: "satisfy";
+      }
+      
+
